# tensor-network-notes

./: .gitignore  .gitmodules  .pre-commit-config.yaml  0-utils-checking.ipynb  0-utils-data.ipynb  0-utils-devices.ipynb  0-utils-mapping.ipynb  0-utils.ipynb  1-2-mlx.ipynb  1-2.ipynb  1-3-mlx.ipynb  1-3.ipynb  1-4-mlx.ipynb  1-4.ipynb  1-5-mlx.ipynb  1-5.ipynb  1-6-mlx.ipynb  1-6.ipynb  1-7.ipynb  1-8.ipynb  2-1.ipynb  2-2.ipynb  2-3.ipynb  2-4.ipynb  2-5.ipynb  2-6.ipynb  2-7.ipynb  2-8-calc-ground-state.ipynb  2-8.ipynb  3-1.ipynb  3-2.ipynb  3-3.ipynb  3-4.ipynb  3-5.ipynb  3-6.ipynb  3-7.ipynb  3-8.ipynb  4-1.ipynb  4-10.ipynb  4-11.ipynb  (+22 more)
rust/: Cargo.toml  tch-torch-interop-tutorial.md
rust/.cargo/: config.toml
rust/docs/: python-einops-api-inventory.md  rustdoc-header.html  tch-rs-port-plan.md  tch-rs-port-todo.md
rust/scripts/: build-rustdoc.sh  libtorch-env.sh  test-python-interop.sh  test-rust.sh
rust/src/: error.rs  feature_mapping.rs  lib.rs  types.rs
rust/src/algorithms/: calc_ground_state.rs  eigen_decomposition.rs  feature_selection.rs  gmps.rs  imaginary_time_evolution.rs  lazy_classifier.rs  mod.rs  quantum_kernels.rs  tensor_decomposition.rs  time_evolving_block_decimation.rs
rust/src/mps/: functional.rs  mod.rs  modules.rs
rust/src/networks/: adqc.rs  hybrid.rs  mod.rs  qrnn.rs  res_mps.rs  time_evolution.rs
rust/src/quantum_state/: functional.rs  mod.rs
rust/src/tensor_gates/: functional.rs  hamiltonians.rs  mod.rs  modules.rs
rust/src/utils/: checking.rs  data.rs  devices.rs  mapping.rs  mod.rs  tensors.rs
rust/tests/: pytorch_interop.rs
scripts/: run-notebook-smoke.py
tensor_network/: _modidx.py  eigen_decomposition.py  feature_mapping.py  setup_ref_code_import.py  tensor_decomposition.py  tensor_gate.py  tensor_utils.py  utils.py
tensor_network/algorithms/: calc_ground_state_linear_operator.py  dyn_feature_selection_OEE.py  entanglement_ordered_sampling_protocal.py  gmps.py  imaginary_time_evolution.py  lazy_classifier.py  quantum_kernel_visualization.py  quantum_kernels.py  tensor_decomposition.py  time_evolving_block_decimation.py
tensor_network/mlx/: eigen_decomposition.py  tensor_utils.py
tensor_network/mlx/networks/: res_mps.py
tensor_network/mlx/utils/: tensors.py
tensor_network/mps/: functional.py  modules.py
tensor_network/networks/: adqc.py  fc.py  hybrid.py  qrnn.py  res_mps.py  time_evolution.py
tensor_network/quantum_state/: functional.py
tensor_network/tensor_gates/: functional.py  hamiltonians.py  modules.py
tensor_network/utils/: checking.py  data.py  devices.py  mapping.py  tensors.py
tensor_network_rs/: Cargo.toml  port_plan.md
tensor_network_rs/.cargo/: config.toml
tensor_network_rs/src/: constants.rs  docs-header.html  eigen_decomposition.rs  feature_mapping.rs  lib.rs  types.rs
tensor_network_rs/src/algorithms/: gmps.rs  imaginary_time_evolution.rs  lazy_classifier.rs  quantum_kernels.rs  tensor_decomposition.rs  time_evolving_block_decimation.rs
tensor_network_rs/src/lecture_code/: lecture_1_2.rs  mod.rs
tests/: test_cuda_portability.py
(+10 files in other folders)
