[project]
name="tensor-network"
version = "0.1.0"
description = "Tensor Network Exercises"
readme = "README.md"
requires-python=">=3.12"
dependencies = [
    "einops>=0.8.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.6",
    "nbdev>=2.3.37",
    "poethepoet>=0.33.1",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]
mlx = [
    "mlx>=0.25.0",
]
ref-code-deps = [
    "opencv-python>=4.11.0.86",
]

[tool.ruff]
extend-exclude = ["tensor_network", "setup.py"]
line-length = 100

[tool.poe.tasks]
format = "uv run ruff format"
sync = "uv run nbdev_export"
precommit = ["format", "sync"]
lab = "uv run jupyter lab"
