[package]
name = "tensor-network-code"
version = "0.1.0"
edition = "2024"

[features]
default = []
python-interop = ["dep:pyo3", "tch/python-extension"]

[dependencies]
einops = { path = "einops-rs" }
linfa-datasets = { version = "0.8.1", default-features = false, features = ["iris"] }
pyo3 = { version = "0.24", features = ["auto-initialize"], optional = true }
tch = { path = "tch-rs" }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
